package com.zsx.design.pattern.builder;

import lombok.Data;

@Data
public class Product {

    private String wheel;

    private String skeleton;

    private String engine;
}
